Accessibility Issue in High Contrast Mode - The keyboard focus is not visible for the Add Question button (#3685)
* resolve #3648 Accessibility Issue in High Contrast Mode - The keyboard focus is not visible for the Add Question button

* work for #3648 : fix add new rule button

--- a/packages/survey-creator-core/src/components/tabs/logic-ui.scss
+++ b/packages/survey-creator-core/src/components/tabs/logic-ui.scss
@@ -178,8 +178,9 @@
 
   .svc-logic-tab__content-action--disabled {
     cursor: default;
-    outline: none;
+    outline: solid calcSize(0.25) transparent;
 
+    &:focus,
     &:hover {
       background-color: $background;
       box-shadow: 0px 1px 2px $shadow-inner;
